feat: save ip and userAgent in refresh token
