# internal/rest-api/models/refresh-token.go
@@ -14,6 +14,9 @@ type RefreshToken struct {
 	UserID uint `gorm:"not null"`
 	User   User `gorm:"onDelete:CASCADE"`
 
+	IP        string
+	UserAgent string
+
 	CreatedAt time.Time
 	UpdatedAt time.Time
 }
@@ -25,11 +28,17 @@ func RefreshTokenFromEntity(refreshToken *entities.RefreshToken) *RefreshToken {
 	}
 
 	return &RefreshToken{
-		ID:        refreshToken.GetId(),
-		Token:     refreshToken.GetToken(),
-		TTLsec:    refreshToken.GetTtlSec(),
-		UserID:    refreshToken.GetUserId(),
-		User:      user,
+		ID: refreshToken.GetId(),
+
+		Token:  refreshToken.GetToken(),
+		TTLsec: refreshToken.GetTtlSec(),
+
+		UserID: refreshToken.GetUserId(),
+		User:   user,
+
+		IP:        refreshToken.GetIP(),
+		UserAgent: refreshToken.GetUserAgent(),
+
 		CreatedAt: refreshToken.GetCreatedAt(),
 		UpdatedAt: refreshToken.GetUpdatedAt(),
 	}
@@ -38,14 +47,20 @@ func RefreshTokenFromEntity(refreshToken *entities.RefreshToken) *RefreshToken {
 func RefreshTokenFromModel(refreshTokenModel *RefreshToken) *entities.RefreshToken {
 	return entities.RefreshTokenFromDB(
 		refreshTokenModel.ID,
+
 		refreshTokenModel.Token,
 		refreshTokenModel.TTLsec,
+
 		refreshTokenModel.UserID,
 		entities.UserFromDB(
 			refreshTokenModel.UserID,
 			refreshTokenModel.User.Email,
 			refreshTokenModel.User.Password,
 		),
+
+		refreshTokenModel.IP,
+		refreshTokenModel.UserAgent,
+
 		refreshTokenModel.CreatedAt,
 		refreshTokenModel.UpdatedAt,
 	)
